fixing the broken wrapping tableheader and table issue in firefox
Former-commit-id: 38174f259e6d48f2aabe7e31c3b3992d3d2a81e1 [formerly 38174f259e6d48f2aabe7e31c3b3992d3d2a81e1 [formerly 38174f259e6d48f2aabe7e31c3b3992d3d2a81e1 [formerly 32887b55dbb9c33e003c0cfb325812343e061c8d]]]
Former-commit-id: 342d60ce0acc8a864fa9f37f40ba320965f8683c
Former-commit-id: b644e6b107178a8dbbfaae38f827def6cd5096de
Former-commit-id: e410d9241527231460bdd075ef5384546eac5907

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -58,8 +58,13 @@ h2 {
     color: #3c5e7c;
 }
 .tableHeader{
+    float:left;
     clear:both;
     width:100%;
+}
+.tableHeader + table{
+    float:left;
+    clear:both;
 }
 .tableHeader h2{
     font-size:20px;
